{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 44,
  "lineage": "52a3aeec-548c-78ea-f166-6f3c5aa81e37",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dpt12-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0923f4efbc6f3d1b5",
            "arn": "arn:aws:ec2:us-east-1:337636137060:elastic-ip/eipalloc-0923f4efbc6f3d1b5",
            "association_id": "eipassoc-0c98e1ea36194b60c",
            "domain": "vpc",
            "id": "eipalloc-0923f4efbc6f3d1b5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0214376ad7e7668a5",
            "private_dns": "ip-192-168-1-73.ec2.internal",
            "private_ip": "192.168.1.73",
            "public_dns": "ec2-98-82-76-1.compute-1.amazonaws.com",
            "public_ip": "98.82.76.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dpt12_ec2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079db87dc4c10ac91",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-05da0c575fd585aa6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05da0c575fd585aa6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8d79560a85c45f9",
            "private_dns": "ip-192-168-2-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.46",
            "public_ip": "34.201.56.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0001be540680ccfe6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054020bb94e2c1287",
            "tags": {
              "Name": "DPT12_EC2_private"
            },
            "tags_all": {
              "Name": "DPT12_EC2_private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ebbba51b53b669d"
            ]
          },
          "dependencies": [
            "aws_key_pair.dpt12_kp",
            "aws_security_group.dpt12_sg",
            "aws_subnet.private-subnet",
            "aws_vpc.dpt12-vpc",
            "tls_private_key.dpt12_pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dpt12_ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079db87dc4c10ac91",
            "arn": "arn:aws:ec2:us-east-1:337636137060:instance/i-0dfe3e42a2b0ac99a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfe3e42a2b0ac99a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06754d7f67aae11dd",
            "private_dns": "ip-192-168-1-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.4",
            "public_ip": "52.90.219.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07f931a4e19be3836",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011c78b55b9c89d76",
            "tags": {
              "Name": "DPT12_EC2_public"
            },
            "tags_all": {
              "Name": "DPT12_EC2_public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ebbba51b53b669d"
            ]
          },
          "dependencies": [
            "aws_key_pair.dpt12_kp",
            "aws_security_group.dpt12_sg",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc",
            "tls_private_key.dpt12_pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dpt12-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:internet-gateway/igw-094be05c7d6d4409c",
            "id": "igw-094be05c7d6d4409c",
            "owner_id": "337636137060",
            "tags": {
              "name": "dpt12-internet gateway"
            },
            "tags_all": {
              "name": "dpt12-internet gateway"
            },
            "vpc_id": "vpc-0acfae980155ec7ae"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dpt12-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0923f4efbc6f3d1b5",
            "association_id": "eipassoc-0c98e1ea36194b60c",
            "connectivity_type": "public",
            "id": "nat-0d0fecc91ce8a646d",
            "network_interface_id": "eni-0214376ad7e7668a5",
            "private_ip": "192.168.1.73",
            "public_ip": "98.82.76.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-011c78b55b9c89d76",
            "tags": {
              "name": "dpt12 NAT Gateway"
            },
            "tags_all": {
              "name": "dpt12 NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-01768d49b7b598a94",
            "id": "rtb-01768d49b7b598a94",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d0fecc91ce8a646d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private RT"
            },
            "tags_all": {
              "Name": "private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acfae980155ec7ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:route-table/rtb-0105fc09cc62847cb",
            "id": "rtb-0105fc09cc62847cb",
            "owner_id": "337636137060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094be05c7d6d4409c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public RT"
            },
            "tags_all": {
              "Name": "public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acfae980155ec7ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d2f7a54a5392f90",
            "route_table_id": "rtb-01768d49b7b598a94",
            "subnet_id": "subnet-054020bb94e2c1287"
          },
          "dependencies": [
            "aws_eip.dpt12-eip",
            "aws_nat_gateway.dpt12-ngw",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dpt12-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc1146aa41144f3f",
            "route_table_id": "rtb-0105fc09cc62847cb",
            "subnet_id": "subnet-011c78b55b9c89d76"
          },
          "dependencies": [
            "aws_internet_gateway.dpt12-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dpt12_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:security-group/sg-05ebbba51b53b669d",
            "description": "dpt06-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound ICMP access",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbounoutboubd all access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ebbba51b53b669d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPs access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dpt06-sg",
            "name_prefix": "",
            "owner_id": "337636137060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DPT12-SG"
            },
            "tags_all": {
              "Name": "DPT12-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acfae980155ec7ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound SSH access",
            "from_port": 22,
            "id": "sgrule-1092754480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ebbba51b53b669d",
            "security_group_rule_id": "sgr-06d53b6fd3016f54e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTP access",
            "from_port": 80,
            "id": "sgrule-139968101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ebbba51b53b669d",
            "security_group_rule_id": "sgr-0c2020690ae4d3184",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound HTTPs access",
            "from_port": 443,
            "id": "sgrule-1838126132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ebbba51b53b669d",
            "security_group_rule_id": "sgr-0bf94f2a300b9fdac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbounoutboubd all access",
            "from_port": 0,
            "id": "sgrule-1681949092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05ebbba51b53b669d",
            "security_group_rule_id": "sgr-03a3e40945d7830ef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dpt12_sg_rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow inbound ICMP access",
            "from_port": -1,
            "id": "sgrule-1247209629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05ebbba51b53b669d",
            "security_group_rule_id": "sgr-0e5b73d3184938255",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dpt12_sg",
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-054020bb94e2c1287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054020bb94e2c1287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0acfae980155ec7ae"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:subnet/subnet-011c78b55b9c89d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c78b55b9c89d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337636137060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0acfae980155ec7ae"
          },
          "dependencies": [
            "aws_vpc.dpt12-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dpt12-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337636137060:vpc/vpc-0acfae980155ec7ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0bc35ec200734f146",
            "default_route_table_id": "rtb-0c8718b19d8dd7289",
            "default_security_group_id": "sg-03457109a387bcabb",
            "dhcp_options_id": "dopt-4638863c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acfae980155ec7ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8718b19d8dd7289",
            "owner_id": "337636137060",
            "tags": {
              "Name": "dpt12-vpc"
            },
            "tags_all": {
              "Name": "dpt12-vpc"
            }
          }
        }
      ]
    }
  ]
}